@@ -30,7 +30,7 @@ PKG_CHECK_MODULES(GLIB, [glib-2.0 ])
 AC_SUBST(GLIB_CFLAGS)
 AC_SUBST(GLIB_LIBS)
 
-PKG_CHECK_MODULES(GLIB2_26,[glib-2.0 >= 2.26.0],[GLIB2_26_DEFINES="-DGLIB2_26_ENABLED" AC_DEFINE([GLIB2_26_ENABLED],[1],[Define to 1 if you have GLIB 2.26 or higher])],AC_MSG_NOTICE([Using GLIB < 2.26 specific features]))
+PKG_CHECK_MODULES(GLIB2_26,[glib-2.0 >= 2.26.0],[with_gconf=no with_gsettings=yes GLIB2_26_DEFINES="-DGLIB2_26_ENABLED" AC_DEFINE([GLIB2_26_ENABLED],[1],[Define to 1 if you have GLIB 2.26 or higher])],AC_MSG_NOTICE([Using GLIB < 2.26 specific features]))
 AC_SUBST(GLIB2_26_DEFINES)
 AC_SUBST(ALSA_CFLAGS)
 AC_SUBST(PULSE_CFLAGS)
@@ -112,18 +112,20 @@ PKG_CHECK_MODULES(DBUS, [dbus-1 >= 0.95 dbus-glib-1 >= 0.70])
 AC_SUBST(DBUS_CFLAGS)
 AC_SUBST(DBUS_LIBS)
 
+USE_GCONF=0
 AC_ARG_WITH([gconf],
     [AS_HELP_STRING([--with-gconf],
         [Use Gconf to store preferences])],
         [AM_CONDITIONAL([GCONF_SCHEMAS_INSTALL],[false])],
         [with_gconf=check])
 AS_IF([test "x$with_gconf" != xno],        
-    [PKG_CHECK_MODULES(GCONF, [gconf-2.0],[AM_GCONF_SOURCE_2
+    [PKG_CHECK_MODULES(GCONF, [gconf-2.0],[AM_GCONF_SOURCE_2 USE_GCONF=1
  GCONF_DEFINES="-DHAVE_GCONF" AC_DEFINE([HAVE_GCONF],[1],[Define to 1 to use GConf to store preferences])],[AM_CONDITIONAL([GCONF_SCHEMAS_INSTALL],[false]) AC_MSG_NOTICE([Using keystore for preferences])])
     AC_SUBST(GCONF_DEFINES)
     AC_SUBST(GCONF_CFLAGS)
     AC_SUBST(GCONF_LIBS)
     ])
+AC_SUBST(USE_GCONF)
 
 AC_ARG_WITH([gio],
     [AS_HELP_STRING([--with-gio],
