@@ -1,4 +1,5 @@
 Development
+	Apply changes to make gecko-mediaplayer with with gnome-mplayer 1.0.3beta and higher
 	Apply patch from issue #126
 	Updated Turkish translation
 	Work around xulrunner api change Issue #124
